# nanite-factory-game-map

./: .gitignore  Cargo.toml  README.md  generate-assets.js  test.html
.cargo/: config.toml
.github/workflows/: publish-npm.yml
assets/: player.aseprite  title.tmx  title_2.tmx
assets/Cute_Fantasy/Player/: Player_fishing.aseprite
assets/map/: map.ldtk
assets/map/map/backups/58439870-3740-11f0-999a-2778f236b4ac_2025-07-29_21-28-40/: map.ldtk
assets/map/map/backups/58439870-3740-11f0-999a-2778f236b4ac_2025-07-29_21-29-39/: map.ldtk
assets/map/map/backups/58439870-3740-11f0-999a-2778f236b4ac_2025-07-29_21-47-17/: map.ldtk
assets/map/map/backups/58439870-3740-11f0-999a-2778f236b4ac_2025-07-29_21-48-37/map/: RecipePalette.ldtkl
assets/sprites/Cute_Fantasy_Characters/: read_me.txt
assets/sprites/Cute_Fantasy_Christmas/Cute_Fantasy_Christmass/: read_me.txt
assets/sprites/Cute_Fantasy_Halloween/: read_me.txt
generate_frames/: Cargo.toml  frames.json
generate_frames/src/: main.rs
src/: app.rs  lib.rs  main.rs  wasm_api.rs
src/actions/: mod.rs
src/bridge/: mod.rs
src/camera/: mod.rs  systems.rs
src/common/: events.rs  mod.rs
src/entities/: components.rs  mod.rs  resources.rs  systems.rs
src/marquee/: mod.rs  resources.rs  systems.rs
src/picking/: mod.rs  systems.rs
src/remote/: mod.rs  resources.rs  systems.rs  websocket.rs
src/selection/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/shared/: events.rs  mod.rs  resources.rs
src/tilemap/: assets.rs  components.rs  mod.rs  observers.rs  plugins.rs  systems.rs
src/timeline/: mod.rs  resources.rs  run_conditions.rs  systems.rs  utils.rs
wasm_result/: Cargo.toml
wasm_result/src/: lib.rs
