[package]
name = "nanite-factory-game-map"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.15.3"}
bevy_ecs_tilemap = "0.15.0"
bevy_pancam = "0.17.0"
bevy_quick_response = "0.3.1"
crossbeam-channel = "0.5.14"
thiserror = "2.0.12"
tiled = "0.14.0"
bevy_tweening = "0.12.0"
wasm-streams = "0.4.2"
wasm-bindgen = "0.2.100"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
anyhow = "1.0.98"
tracing-wasm = "0.2.1"
bevy_aseprite_ultra = "0.4.1"
wasm-bindgen-futures = "0.4.50"

[features]
default = ["atlas", "render"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]

# Hold your breath, this is a big one
[profile.release]
lto="fat"
codegen-units = 1
overflow-checks = false
incremental = false
debug=0
strip = "debuginfo"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--one-caller-inline-max-function-size",
    "255",
    "--inline-functions-with-loops",
    "--ignore-implicit-traps",
    "--traps-never-happen",
    "--low-memory-unused",
    "--fast-math",
    "--zero-filled-memory",
    "--flexible-inline-max-function-size",
    "255",
    ]
